--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -20,6 +20,17 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.loader {
+  width: 24px;
+  height: 24px;
+  border: 5px dotted #858c97;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 2s linear infinite;
+}
+
 .remove-scrollbar::-webkit-scrollbar {
   display: none;
   /* Hide the scrollbar */
@@ -62,4 +73,14 @@ body {
   left: 0;
   background-color: inherit;
   z-index: 6;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
